# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: project-check.yml
gendiff/: __init__.py  data_work.py  generate_diff.py
gendiff/cli/: cli.py
gendiff/diff_work/: build_diff.py  data_work.py  generate_diff.py  parser.py
gendiff/formatters/: json.py  plain.py  style_format.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py
tests/fixtures/: format_json_result.txt
