[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI utilite that make diff between two files"
classifiers = [
    "Development Status :: 4 - Beta",
	"Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
authors = ["Mikhail <crazyminer398@gmail.com>"]
packages = [
  { include = "gendiff" },
]
repository = "https://github.com/Un1que11/python-project-50.git"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.0.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
